--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,7 @@ img {
 }
 
 .container {
-  width: 1600px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -72,8 +72,8 @@ img {
 
 /* -------header------- */
 
-.header {
-  padding-bottom: 32px;
+.header-link.current {
+  color: var(--accent-color);
 }
 
 .header-container {
@@ -81,22 +81,9 @@ img {
   align-items: center;
 }
 
-.contacts {
-  display: flex;
-  margin-left: auto;
-  /* justify-content: space-between; */
-  gap: 50px;
-  margin-right: 215px;
-}
-
 .header-navigation {
   display: flex;
   align-items: center;
-}
-
-.header-list {
-  display: flex;
-  gap: 50px;
 }
 
 .header-logo {
@@ -108,7 +95,6 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
   margin-right: 93px;
-  margin-left: 215px;
 }
 
 .web {
@@ -126,13 +112,29 @@ img {
 .header-list.current {
   color: var(--accent-color);
 }
-
 .header-list {
+  display: flex;
+  gap: 50px;
+}
+.header-item {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.header-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--header-list-color);
+  justify-content: center;
+  gap: 50px;
+}
+
+.contacts {
+  display: flex;
+  margin-left: auto;
+  gap: 50px;
 }
 
 .header-mail {
@@ -168,6 +170,7 @@ img {
   background-color: var(--bac-hero-color);
   padding-top: 200px;
   padding-bottom: 200px;
+  text-align: center;
 }
 
 .hero-title {
@@ -186,10 +189,6 @@ img {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  min-width: 216px;
-  height: 50px;
-  margin: 0 auto;
-  display: block;
   margin-top: 30px;
 }
 
@@ -214,8 +213,6 @@ img {
 .our-list {
   display: flex;
   gap: 30px;
-  margin-left: 215px;
-  margin-right: 215px;
 }
 
 .sectinon-tex {
@@ -247,7 +244,6 @@ img {
 .image-item {
   display: flex;
   gap: 30px;
-  justify-content: center;
 }
 
 .section-do {
@@ -290,7 +286,10 @@ img {
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
-
+.containar-tex {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .name-title {
   font-weight: 500;
   font-size: 16px;
@@ -299,7 +298,6 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 10px;
-  margin-top: 30px;
 }
 
 .profession {
@@ -309,13 +307,9 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--paragraf-tex-color);
-  margin-bottom: 30px;
 }
 
 /* -------footer-site------- */
-.addres-contacts {
-  margin-left: 215px;
-}
 
 .footer-site {
   background-color: var(--bac-hero-color);
@@ -332,7 +326,6 @@ img {
   letter-spacing: 0.03em;
   display: inline-block;
   margin-bottom: 20px;
-  margin-left: 215px;
 }
 
 .contacts-item:not(:last-child) {
@@ -393,8 +386,6 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   padding: 6px 22px;
-  margin: 0px auto;
-  display: block;
 }
 
 .p-btn {
@@ -430,11 +421,15 @@ img {
 }
 
 .img-item {
-  
   background-color: var(--bac-tex-color);
-  border: 1px solid #eeeeee;
 }
 
+.tex-img {
+  padding: top 20px;
+  padding-right: ;
+  padding-bottom: ;
+  padding-left: ;
+}
 .title-img {
   font-weight: 700;
   font-size: 18px;
@@ -442,9 +437,11 @@ img {
   /* identical to box height, or 200% */
   letter-spacing: 0.06em;
   color: var(--header-list-color);
-  margin-top: 20px;
-  width: 322px;
-  margin-left: 24px;
+}
+.title-img-tex {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: transparent;
 }
 
 .img-tex {
@@ -453,14 +450,10 @@ img {
   /* identical to box height, or 188% */
   letter-spacing: 0.03em;
   color: var(--paragraf-tex-color);
-  margin-top: 4px;
-  width: 322px;
-  margin-left: 24px;
-  margin-bottom: 20px;
 }
 
 .border-line {
-  width: 1600px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
